--- a/data/cover.tex
+++ b/data/cover.tex
@@ -5,7 +5,7 @@
 %%% End:
 %\secretlevel{绝密} \secretyear{10}
 
-\ctitle{基于模糊聚类及生成对抗网络的遥感影像分类研究}
+\ctitle{基于模糊聚类及生成对抗网络的遥感影像分类方法研究}
 %\makeatletter
 %\cdegree{硕士}
 
