--- a/main.tex
+++ b/main.tex
@@ -24,8 +24,8 @@
 
 %%% 封面部分
 \frontmatter
-\input{data/cover}
-\makecover
+%\input{data/cover}
+%\makecover
 
 % 目录
 \tableofcontents
@@ -51,12 +51,14 @@
 %%% 其它部分
 %\backmatter
 
-% 致谢
-\include{data/ack}
+
 
 % % 参考文献
 \bibliographystyle{bnubib}
 \bibliography{ref/refs}
+
+% 致谢
+\include{data/ack}
 
 % 附录
 %\begin{appendix}
