--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -682,3 +682,17 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   journal={arXiv preprint arXiv:1409.1556},
   year={2014}
 }
+
+@article{luc2016semantic,
+  title={Semantic segmentation using adversarial networks},
+  author={Luc, Pauline and Couprie, Camille and Chintala, Soumith and Verbeek, Jakob},
+  journal={arXiv preprint arXiv:1611.08408},
+  year={2016}
+}
+
+@article{mirza2014conditional,
+  title={Conditional generative adversarial nets},
+  author={Mirza, Mehdi and Osindero, Simon},
+  journal={arXiv preprint arXiv:1411.1784},
+  year={2014}
+}
