--- a/data/ack.tex
+++ b/data/ack.tex
@@ -5,13 +5,15 @@
 %%% End:
 
 \begin{ack}
-  衷心感谢导师 xxx 教授和物理系 xxx 副教授对本人的精心指导。他们的言传身教将使
-  我终生受益。
+  快乐的时间总是过得很快，转瞬之间，我在北京师范大学三年的硕士研究生生活即将结束。在临近毕业之际，我要向曾经帮助和关心我的老师、家人、同学与好友们表示感谢。
 
-  在美国麻省理工学院化学系进行九个月的合作研究期间，承蒙 xxx 教授热心指导与帮助，不
-  胜感激。感谢 xx 实验室主任 xx 教授，以及实验室全体老师和同学们的热情帮助和支
-  持！本课题承蒙国家自然科学基金资助，特此致谢。
+  首先感谢我的两位指导老师：余先川教授和胡丹副教授。还记得三年前刚来北京师范大学学习的时候，我对实验室研究工作和科研方向都比较迷茫，是胡丹老师指导我开展科研学习的工作，是胡老师告诉我如何去看论文，怎样学习研究学者思考问题的方式。每周一到两次的讨论中胡老师也时常跟我探讨课题中的知识，对于我的困惑与科研中遇到的问题，胡老师都耐心的和我沟通、讨论。研二下学期伊始，胡丹老师去美国从事新的事业，虽然远隔重洋，但还时常接收到胡老师来自大洋彼岸的关心和问候。同时胡老师在生活上对我也非常热心，有时候生活上不如意或遇到烦心事，胡老师也体贴入微，关心并疏导我的个人问题，感谢胡老师近两年对我学习和生活上的关怀。胡老师出国后，我转到现在的导师余先川教授下继续从事科研学习。我也由衷地感谢余老师，余老师在专业学科领域有极其敏锐的洞察力，能够迅速了解当前领域内研究的前沿内容。在余老师的指导下，我能够在遥感影像数据挖掘领域继续深入研究，提升自己的科研能力。毕业论文从开题到撰写过程中，余老师都认真、耐心地指导我并指出论文中存在的问题与不足。在生活上，余老师待人亲切，关心学生，更像是实验室大家庭的家长，实验室经常性的聚餐、实验室每个小伙伴生日会的庆祝与祝福都让远离家乡，漂泊北京的我们感受到了来自家庭的温暖。此外，余老师也会带着我们去参加一些前沿学术论坛和会议，让我们接触到学术界的科研大牛的同时，也开阔拓展了我们的视野。再次对我两位导师表示致谢！
 
-  感谢清华的薛瑞尼及相关同学，他们制作维护的清华学位论文模板极大的方便了\LaTeX{}用户的论文写作。
+  其次感谢实验室的张立保老师，张老师严谨的科研态度值得我学习，另外感谢张老师在电子楼512室给我提供的科研工位，让我更便利地从事科研学习。同时感谢师母的关照，感谢师母对实验室学生的关心和支持，师母也让我们体会到慈爱家长般的温暖。
 
+  感谢实验室的每一位同学，和大家在一起学习、生活的时光让我快乐、开心，感谢实验室里每一位师兄师姐师弟和师妹们。
+
+  感谢我的室友冯思博、朱云宗和戎博杰，谢谢你们三年的陪伴，谢谢你们容忍我生活上的一些小毛病，感谢大家。
+
+  最后，我要感谢我的父母、家人和朋友们对我的支持和鼓励，是你们在我迷茫的时候给我支持和力量，鼓舞着我面对困难，笑对困难与挫折。
 \end{ack}
