--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -696,3 +696,14 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   journal={arXiv preprint arXiv:1411.1784},
   year={2014}
 }
+
+@article{de2005tutorial,
+  title={A tutorial on the cross-entropy method},
+  author={De Boer, Pieter-Tjerk and Kroese, Dirk P and Mannor, Shie and Rubinstein, Reuven Y},
+  journal={Annals of operations research},
+  volume={134},
+  number={1},
+  pages={19--67},
+  year={2005},
+  publisher={Springer}
+}
