--- a/data/chap03.tex
+++ b/data/chap03.tex
@@ -341,7 +341,7 @@ $\tilde{X_i}$ 和$\tilde{V_{i}}$ 的区间值距离$d_{I} (\tilde{X_i}, \tilde{V
 \subsection{后处理}
 \label{subsec::chap03-3-3}
 
-经过像元分割与非监督模糊聚类，可以得到遥感影像的初始分类结果。使用CORINE 地物覆被处理系统\footnote{CORINE (Coordination of Information on the Environment) 是欧洲委员会于1985年提出的环境信息协调系统，其包含44个类别的地物覆被，常用于地物覆被的后处理。官方网址：\url{https://land.copernicus.eu/pan-european/corine-land-cover}.} 对初始聚类结果进行人工类别合并，实现基于高分影像识别的高级地物覆被分类\cite{zhang2011progress}。
+经过像元分割与非监督模糊聚类，可以得到遥感影像的初始分类结果。使用CORINE 地物覆被处理系统\footnote{CORINE (Coordination of Information on the Environment) 是欧洲委员会于1985年提出的环境信息协调系统，其包含44个类别的地物覆被，常用于地物覆被的后处理。官方网址：https://land.copernicus.eu/pan-european/corine-land-cover.} 对初始聚类结果进行人工类别合并，实现基于高分影像识别的高级地物覆被分类\cite{zhang2011progress}。
 
 \begin{table}[htbp]
     \caption{ 实验区土地覆被类别表}\label{tab:1}
