--- a/data/ack.tex
+++ b/data/ack.tex
@@ -13,7 +13,10 @@
 
   感谢实验室的每一位同学，和大家在一起学习、生活的时光让我快乐、开心，感谢实验室里每一位师兄师姐师弟和师妹们。
 
-  感谢我的室友冯思博、朱云宗和戎博杰，谢谢你们三年的陪伴，谢谢你们容忍我生活上的一些小毛病，感谢大家。
+  感谢我的室友冯思博、朱云宗和戎博杰，谢谢你们三年的陪伴，大家一起度过的研究生时光也会成为我心中的美好记忆。
 
-  最后，我要感谢我的父母、家人和朋友们对我的支持和鼓励，是你们在我迷茫的时候给我支持和力量，鼓舞着我面对困难，笑对困难与挫折。
+  最后，我要感谢我的父母、家人和朋友们对我的支持和鼓励。你们在我背后默默的奉献与付出，一直是我坚持前行的动力，是你们在我迷茫的时候给我支持和力量，鼓励我面对困难，笑对困难与挫折。
+
+  漫漫人生路，几度欢乐，几度忧愁，正因此才能体会到生命与生活的多彩。未来的路还很漫长，心怀感恩砥砺前行。
+
 \end{ack}
